--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -19,7 +19,10 @@
             </div>
           </div>
           <div class="price">
-            <div *ngIf="product.discount === 0">{{ product.price | currency:'USD' }}</div>
+            <div 
+              [ngStyle]="{'color': product.discount > 0 ? 'red' : ''}" 
+              [ngClass]="{strikethrough: product.discount > 0}">{{ product.price | currency:'USD' }}
+            </div>
             <div *ngIf="product.discount > 0" class="discount">{{ (product.price * (1 - product.discount)) | currency:'USD' }}</div>
             <button class="cta">Buy</button>
           </div>
