--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -8,25 +8,9 @@
     </div>
   
     <ul class="products">
-      <li class="product-item" *ngFor="let product of getFilteredProducts()">
-        <div class="product">
-          <div class="product-details">
-            <img src="{{ getImageUrl(product) }}" [alt]="product.name" />
-            <div class="product-info">
-              <div class="name">{{ product?.name }}</div>
-              <div class="description">{{ product?.description }}</div>
-              <div class="category">Part Type: {{ product.category}}</div>
-            </div>
-          </div>
-          <div class="price">
-            <div 
-              [ngStyle]="{'color': product.discount > 0 ? 'red' : ''}" 
-              [ngClass]="{strikethrough: product.discount > 0}">{{ product.price | currency:'USD' }}
-            </div>
-            <div *ngIf="product.discount > 0" class="discount">{{ (product.price * (1 - product.discount)) | currency:'USD' }}</div>
-            <button class="cta">Buy</button>
-          </div>
-        </div>
+      <li class="product-item" *ngFor="let currentProduct of getFilteredProducts()">
+        <!-- We are lessoning for 'buy' event from the child -->
+        <bot-product-details [product]="currentProduct" (buy)="addToCart(currentProduct)"></bot-product-details>
       </li>
     </ul>
   </div>
